--- a/freelancer_inicio/index.html
+++ b/freelancer_inicio/index.html
@@ -91,7 +91,7 @@
 
             <fieldset>
                 <legend>contactanos llenando todos los campos</legend>
-                <div
+                <div>
                 <label>Nombre</label>
                 <input type="text" placeholder="Tu nombre">
                 </div>
