--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 class="titulo">JAIME VARGAS <span>Freelancer</span></h1> 
     </header>
 
-    <nav>
+    <nav class="navegacion-principal contenedor">
         <a href="#">Inicio</a>
         <a href="#">Sobre mi</a>
         <a href="#">Clientes</a>
